src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>MQL_Date_Time__c</fullName>
        <description>Stamped by Workflow Rule</description>
        <label>MQL Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MQL_First_Date__c</fullName>
        <label>MQL First Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQL_Most_Recent__c</fullName>
        <label>MQL Most Recent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQL__c</fullName>
        <description>Set to true if lead has lead score greater than or equal to 225</description>
        <formula>mkto71_Lead_Score__c&gt;=225</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintenance_ContactOLD__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this person should be contacted regarding license maintenance issues (only relevant for customers)</inlineHelpText>
        <label>Maintenance ContactOLD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintenance_Contact__c</fullName>
        <inlineHelpText>Check this box if this person should be contacted regarding license maintenance issues (only relevant for customers)</inlineHelpText>
        <label>Maintenance Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Major_Account__c</fullName>
        <formula>IF(Account.Major_Account__c=TRUE,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>Major Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marked_Non_Responsive_No_Interest__c</fullName>
        <label>Marked Non-Responsive/No Interest</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a customer contact for marketing (i.e webinar, case studies, etc)</description>
        <label>Marketing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Email__c</fullName>
        <label>Marketing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Marketing_Notes__c</fullName>
        <label>Marketing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Owner__c</fullName>
        <label>Marketing Owner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Role__c</fullName>
        <description>Contact roles as they relate to marketing.</description>
        <label>Role for Marketing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marketing_Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_of_Email_Nurture_Program__c</fullName>
        <label>Member of Email Nurture Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hybrid Cloud</fullName>
                </value>
                <value>
                    <fullName>QoS</fullName>
                </value>
                <value>
                    <fullName>VDI</fullName>
                </value>
                <value>
                    <fullName>OpenStack</fullName>
                </value>
                <value>
                    <fullName>Multi-Hypervisor / Hyper-V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_New_MQL__c</fullName>
        <formula>IF(DATEVALUE(MQL_Date_Time__c)=DATEVALUE(CreatedDate),&quot;Net New&quot;,&quot;Not Net New&quot;)</formula>
        <label>Net New MQL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Contact_Owner_ID__c</fullName>
        <formula>IF(OwnerId=Account.OwnerId,&quot;No Change&quot;,Account.OwnerId)</formula>
        <label>New Contact Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Hosts__c</fullName>
        <label>Number of HostsOLD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 20</fullName>
                </value>
                <value>
                    <fullName>20-40</fullName>
                </value>
                <value>
                    <fullName>40-60</fullName>
                </value>
                <value>
                    <fullName>60-100</fullName>
                </value>
                <value>
                    <fullName>100-200</fullName>
                </value>
                <value>
                    <fullName>200-500</fullName>
                </value>
                <value>
                    <fullName>&gt; 500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_VMs__c</fullName>
        <description>Number of VMsOLD</description>
        <label>VM Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;250</fullName>
                </value>
                <value>
                    <fullName>251-1500</fullName>
                </value>
                <value>
                    <fullName>1500-5000</fullName>
                </value>
                <value>
                    <fullName>&gt; 5000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OK_to_Call_on_Partner_s_Behalf__c</fullName>
        <inlineHelpText>If yes, you are free to reference the partner in the call. If no, do NOT mention the partner.</inlineHelpText>
        <label>OK to Call on Partner&apos;s Behalf</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes (VMT channel rep only)</fullName>
                </value>
                <value>
                    <fullName>Yes (all VMT sales reps)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>One_contact__c</fullName>
        <formula>1</formula>
        <label>One (contact)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Source__c</fullName>
        <formula>IF(ISBLANK(Original_Referrer_Mkto__c),NULL, 
IF( 
OR(CONTAINS(Original_Referrer_Mkto__c,&quot;google&quot;), 
CONTAINS(Original_Referrer_Mkto__c,&quot;yahoo&quot;), 
CONTAINS(Original_Referrer_Mkto__c,&quot;bing&quot;)),&quot;Organic Search&quot;, 
IF( 
OR(CONTAINS(Original_Referrer_Mkto__c,&quot;facebook&quot;), 
CONTAINS(Original_Referrer_Mkto__c,&quot;twitter&quot;), 
CONTAINS(Original_Referrer_Mkto__c,&quot;linkedin&quot;), 
CONTAINS(Original_Referrer_Mkto__c,&quot;youtube&quot;)),&quot;Social Media&quot;, 
IF(CONTAINS(Original_Referrer_Mkto__c,&quot;?source=email&quot;),&quot;Email&quot;, 
IF(CONTAINS(Original_Referrer_Mkto__c,&quot;?source=&quot;),&quot;Other Campaign&quot;, 
IF( 
AND(NOT(CONTAINS(Original_Referrer_Mkto__c,&quot;www.vmturbo.com&quot;)), 
NOT(CONTAINS(Original_Referrer_Mkto__c,&quot;go.vmturbo.com&quot;)), 
NOT(CONTAINS(Original_Referrer_Mkto__c,&quot;info.vmturbo.com&quot;))),&quot;Referral&quot;, 
IF( 
OR(CONTAINS(Original_Referrer_Mkto__c,&quot;www.vmturbo.com&quot;), 
CONTAINS(Original_Referrer_Mkto__c,&quot;go.vmturbo.com&quot;), 
CONTAINS(Original_Referrer_Mkto__c,&quot;info.vmturbo.com&quot;)),&quot;Direct Traffic&quot;,NULL)))))))</formula>
        <label>Online Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opened_Marketo_Email_in_Last_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opened Marketo Email in Last Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>Denotes the Internal Organization a contact belongs to within a larger account</description>
        <inlineHelpText>Denote the Internal Organization a contact belongs to within a larger account</inlineHelpText>
        <label>Organization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Inbound_Lead_Owner_Team_Static__c</fullName>
        <label>Original Inbound Lead Owner Team Static</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Inbound_Lead_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Inbound Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Referrer_Mkto__c</fullName>
        <formula>HYPERLINK(mkto71_Original_Referrer__c,LEFT( mkto71_Original_Referrer__c , 140))</formula>
        <label>Original Referrer Mkto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Source_Info_Summary__c</fullName>
        <label>Original Source Info (Summary)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role_Bucket__c</fullName>
        <formula>Owner.Role_Bucket_for_TVs__c</formula>
        <label>Owner Role Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRMImport_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field controls whether the contact should be imported into the Partner Portal as Partner Portal User.</description>
        <inlineHelpText>If this field is checked, the contact will be imported via the API into the Partner Portal as a user under the Partners Account that the contact is associated with.</inlineHelpText>
        <label>Vartopia Partner Portal Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Sales_Manager__c</fullName>
        <label>Partner Account (Sales) Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Department__c</fullName>
        <label>Partner Contact Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <description>A – Gets VMTurbo, Has Registered and Closed Business
B – Gets VMTurbo, Has Registered but not Closed Business
C – Getting VMTurbo, Has Not Registered or Closed Business yet
D – Not getting the message, has Not Registered or Closed Business
F – Actively selling against us in Accounts</description>
        <inlineHelpText>A - understands VMT message, Has Regs &amp; Closed Business
B - understands VMT message, Has Regs &amp; No Closed Business
C - learning VMT message, No Regs or business
D - doesn&apos;t understand VMT message
F - selling against VMT
NLT - no longer at company</inlineHelpText>
        <label>Partner Contact Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>NLT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Office_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Office</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Partner_Office__c.Parent_Partner_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Partner_Office__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Office_Name__c</fullName>
        <formula>Partner_Office_Channel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Office Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Portal_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This identifies that this Conact is an Administrator in their Partner Portal</description>
        <inlineHelpText>This identifies that this Conact is an Administrator in their Partner Portal</inlineHelpText>
        <label>Partner Portal Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Referral__c</fullName>
        <description>For Marketing</description>
        <label>Partner Referral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Interests__c</fullName>
        <inlineHelpText>The Contact&apos;s personal interests (sports teams, hobbies, etc.)</inlineHelpText>
        <label>Personal Interests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PhoneHome_Data_Last_Refreshed__c</fullName>
        <label>PhoneHome Data Last Refreshed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PhoneHome_License_Type__c</fullName>
        <label>PhoneHome License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Freemium</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>30-Day Trial</fullName>
                </value>
                <value>
                    <fullName>VHM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PhoneHome_Number_of_Hosts__c</fullName>
        <label>PhoneHome Number of Hosts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PhoneHome_Number_of_VMs__c</fullName>
        <label>PhoneHome Number of VMs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previously_Engaged__c</fullName>
        <formula>IF(
OR(
Demo_Count__c &gt; 0,
First_Conversation_Date__c != null,
First_Connect_Date__c != null,
Last_Connect_Date__c != null,
Last_Conversation_Date__c != null
),
True,
False
)</formula>
        <label>Previously Engaged?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Download_Status__c</fullName>
        <formula>CASE(IF(ISBLANK(First_Free_Version_Activation_Date__c),&quot;0&quot;,&quot;1&quot;)&amp;&quot;-&quot;&amp;IF(ISBLANK(First_Full_Version_Activation_Date__c),&quot;0&quot;,&quot;1&quot;)&amp;&quot;-&quot;&amp;IF(ISBLANK(First_Full_Version_Download_Date__c),&quot;0&quot;,&quot;1&quot;),
&quot;0-0-0&quot;,&quot;No product download&quot;,
&quot;1-0-0&quot;,&quot;Free activation&quot;,
&quot;0-1-0&quot;,&quot;Full activation&quot;,
&quot;0-0-1&quot;,&quot;Full download&quot;,
&quot;1-1-0&quot;,&quot;Free &amp; full activation&quot;,
&quot;1-0-1&quot;,&quot;Free activation &amp; full download&quot;,
&quot;0-1-1&quot;,&quot;Full activation &amp; download&quot;,
&quot;1-1-1&quot;,&quot;All three&quot;,
&quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Download Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projects_for_Marketing__c</fullName>
        <description>Upcoming projects/cloud initiatives on Roadmap. Sourced from a Marketo form.</description>
        <label>Projects on Roadmap (Marketo)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Projects_for_Marketing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_list_uploaded_on__c</fullName>
        <label>Prospect list uploaded on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROI_Annual_Growth_Rate_of_VM_Count__c</fullName>
        <label>Annual Growth Rate of VM Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ROI_Annual_Growth_of_Storage_Environment__c</fullName>
        <label>Annual Growth of Storage Environment</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ROI_Avg_Hourly_Cost_per_FTE__c</fullName>
        <label>Avg Hourly Cost per Full-Time Employee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ROI_Cost_per_Terabyte__c</fullName>
        <label>Cost per Terabyte</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ROI_Current_Number_of_Terabytes__c</fullName>
        <label>Current Number of Terabytes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROI_Hardware_Cost_per_Host__c</fullName>
        <label>Hardware Cost per Host</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ROI_Num_of_FTE_Working_on_VM_Tickets__c</fullName>
        <label>Num of FTE Working on VM Related Tickets</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROI_Number_of_Cores_per_Host__c</fullName>
        <label>Number of Cores per Host</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROI_Number_of_Hosts__c</fullName>
        <label>Number of Hosts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROI_Number_of_VMs__c</fullName>
        <label>Number of VMs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROI_Percent_of_Storage_Capacity_Avail__c</fullName>
        <label>Percent of Storage Capacity Available</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ROI_Software_Cost_per_Host__c</fullName>
        <label>Software Cost per Host</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ready_to_Schedule__c</fullName>
        <formula>If (
AND(
NOT(ISNULL(Demo_Date__c)),
NOT(ISNULL(Demo_Assigned_To__c)), 
NOT(ISNULL(Related_Opportunity__c)), 
NOT(ISNULL(VM_Count__c)), NOT(ISNULL(Host_Count__c)), 
NOT(ISNULL(Socket_Count__c)), 
NOT(ISNULL(Core_Count__c)),
NOT(ISBLANK(Text(Sales_Engineer_for_Demo__c))), 
NOT(ISBLANK(Demo_Notes__c))), 
TRUE, FALSE)</formula>
        <label>Ready to Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Flag__c</fullName>
        <label>Reason for Flag</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recent_Download__c</fullName>
        <label>Recent Download</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Download</fullName>
                </value>
                <value>
                    <fullName>Full Activation</fullName>
                </value>
                <value>
                    <fullName>Free Activation</fullName>
                </value>
                <value>
                    <fullName>WP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recent_Search_Term__c</fullName>
        <label>Recent Search Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Count__c</fullName>
        <description>Count of number of times this customer has been used as a reference. Updated by BatchUpdateTaskOthers. Count of the number of Referral tasks associated with a particular contact record.</description>
        <inlineHelpText>Number of times this contact has been used as a reference</inlineHelpText>
        <label>Referral Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Source_Info__c</fullName>
        <description>Not related to Channel/Partner program.</description>
        <label>Registration Source Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejuvenated_Date_Time__c</fullName>
        <label>Rejuvenated Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rejuvenated_Download__c</fullName>
        <description>Returns true if latest web form fill date is more than 90 days after created date.</description>
        <formula>NOT(OR( 
ISNULL(Latest_Web_Form_Fill_Date__c), 
(DATEVALUE(Latest_Web_Form_Fill_Date__c) - DATEVALUE(  CreatedDate ) ) &lt;=90))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rejuvenated Download</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remove_from_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove from Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_VMT_Shirt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Requested T-shirt in exchange for demo. April 2014</inlineHelpText>
        <label>Requested VMT-Shirt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Technical User</fullName>
                </value>
                <value>
                    <fullName>Technical Lead</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Budget Holder</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>VMT Champion</fullName>
                </value>
                <value>
                    <fullName>Competitor Champion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Routed_to_Concierge_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Routed to Concierge Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SE_Assigned__c</fullName>
        <formula>Account.SE_Assigned1__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SE Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Engineer_for_Demo__c</fullName>
        <label>Sales Engineer for Demo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alec Kemp</fullName>
                </value>
                <value>
                    <fullName>Allen Patterson</fullName>
                </value>
                <value>
                    <fullName>Anson McCook</fullName>
                </value>
                <value>
                    <fullName>Aseem Anwar</fullName>
                </value>
                <value>
                    <fullName>Barry Howard</fullName>
                </value>
                <value>
                    <fullName>Brad Blodgett</fullName>
                </value>
                <value>
                    <fullName>Charles Russell</fullName>
                </value>
                <value>
                    <fullName>Chris Rauch</fullName>
                </value>
                <value>
                    <fullName>Chris Williamson</fullName>
                </value>
                <value>
                    <fullName>Daniel Butzer</fullName>
                </value>
                <value>
                    <fullName>Don McKeith</fullName>
                </value>
                <value>
                    <fullName>Eric Horsman</fullName>
                </value>
                <value>
                    <fullName>Hillel Adler</fullName>
                </value>
                <value>
                    <fullName>Iddo Avneri</fullName>
                </value>
                <value>
                    <fullName>Jacob Ben-David</fullName>
                </value>
                <value>
                    <fullName>James Dyckowski</fullName>
                </value>
                <value>
                    <fullName>Jamie Hodge</fullName>
                </value>
                <value>
                    <fullName>Jason Beaudette</fullName>
                </value>
                <value>
                    <fullName>Jason Howard</fullName>
                </value>
                <value>
                    <fullName>Jason Huff</fullName>
                </value>
                <value>
                    <fullName>Jeremy Levenson</fullName>
                </value>
                <value>
                    <fullName>Jerome Papazian</fullName>
                </value>
                <value>
                    <fullName>Jimmy Herbert</fullName>
                </value>
                <value>
                    <fullName>Joe Burke</fullName>
                </value>
                <value>
                    <fullName>Juan Santos</fullName>
                </value>
                <value>
                    <fullName>Jules Albin</fullName>
                </value>
                <value>
                    <fullName>Kent Nierendorf</fullName>
                </value>
                <value>
                    <fullName>Kevin Lamb</fullName>
                </value>
                <value>
                    <fullName>Luis DaSilva</fullName>
                </value>
                <value>
                    <fullName>Masa Kawano</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Talk_Track__c</fullName>
        <inlineHelpText>Please choose the appropriate talk track relevant to your call (if any).</inlineHelpText>
        <label>Sales Talk Track</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015Q4 License Gut Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Same_Owner_as_Account__c</fullName>
        <formula>if(OwnerId=Account.OwnerId,&quot;Same&quot;,&quot;Different&quot;)</formula>
        <label>Same Owner as Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if a demo has been scheduled with this contact</inlineHelpText>
        <label>Scheduled Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score_Details_Ordered__c</fullName>
        <formula>IF(AND(OR(NOT(ISBLANK(Latest_Web_Form_Fill_Date__c)),LEFT(TEXT(LeadSource),4)=&quot;TSE:&quot;,LEFT(TEXT(LeadSource),4)=&quot;3PT:&quot;),OR(Dial_Count__c=0,Latest_Web_Form_Fill_Date_Adj_For_Blanks__c&gt;Last_Dial_Date_adj_for_blanks__c),TEXT(Contact_Status__c)=&quot;Actively Prospecting&quot;),&quot;(a) Inbound: Call Immediately&quot;, 
IF(Flag__c=TRUE,&quot;(g) Flagged by Rep&quot;, 
IF(AND(TEXT(Owner.Location__c)=&quot;United States&quot;,MailingCountry&lt;&gt;&quot;&quot;,UPPER(MailingCountry)&lt;&gt;&quot;UNITED STATES&quot;,UPPER(MailingCountry)&lt;&gt;&quot;CANADA&quot;,VALUE(MID(TEXT(NOW()),FIND(&quot; &quot;,TEXT(NOW()))+1,2))&lt;=16),&quot;(g) Foreign Country&quot;, 
IF(OR(NOT(ISBLANK(First_Full_Version_Download_Date__c)),NOT(ISBLANK(First_Full_Version_Activation_Date__c))),&quot;(b) Trial Download&quot;, 
IF(OR(NOT(ISBLANK(First_Free_Version_Download_Date__c)),NOT(ISBLANK(First_Free_Version_Activation_Date__c))),&quot;(c) VHM Download&quot;, 
IF(NOT(ISBLANK(First_Web_Form_Fill_Date__c)),&quot;(d) Other Web Form Fill&quot;, 
IF(AND(NOT(ISBLANK(Prospect_list_uploaded_on__c)),TODAY()-Prospect_list_uploaded_on__c&lt;=14),&quot;(e) Recent Mktg Event&quot;, 
IF(Confirmed_Stakeholder__c=TRUE,&quot;(f) Confirmed Stakeholder&quot;, &quot;(h) -&quot;))))))))</formula>
        <label>Score Details (Ordered)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Details__c</fullName>
        <formula>IF(AND(OR(NOT(ISBLANK(Latest_Web_Form_Fill_Date__c)),LEFT(TEXT(LeadSource),4)=&quot;TSE:&quot;,LEFT(TEXT(LeadSource),4)=&quot;3PT:&quot;),OR(Dial_Count__c=0,Latest_Web_Form_Fill_Date_Adj_For_Blanks__c&gt;Last_Dial_Date_adj_for_blanks__c),TEXT(Contact_Status__c)=&quot;Actively Prospecting&quot;),&quot;Inbound: Call Immediately&quot;,
IF(Flag__c=TRUE,&quot;Flagged by Rep&quot;, 
IF(AND(TEXT(Owner.Location__c)=&quot;United States&quot;,MailingCountry&lt;&gt;&quot;&quot;,UPPER(MailingCountry)&lt;&gt;&quot;UNITED STATES&quot;,UPPER(MailingCountry)&lt;&gt;&quot;CANADA&quot;,VALUE(MID(TEXT(NOW()),FIND(&quot; &quot;,TEXT(NOW()))+1,2))&lt;=16),&quot;Foreign Country&quot;, 
IF(OR(NOT(ISBLANK(First_Full_Version_Download_Date__c)),NOT(ISBLANK(First_Full_Version_Activation_Date__c))),&quot;Trial Download&quot;, 
IF(OR(NOT(ISBLANK(First_Free_Version_Download_Date__c)),NOT(ISBLANK(First_Free_Version_Activation_Date__c))),&quot;VHM Download&quot;, 
IF(NOT(ISBLANK(First_Web_Form_Fill_Date__c)),&quot;Other Web Form Fill&quot;, 
IF(AND(NOT(ISBLANK(Prospect_list_uploaded_on__c)),TODAY()-Prospect_list_uploaded_on__c&lt;=14),&quot;Recent Mktg Event&quot;, 
IF(Confirmed_Stakeholder__c=TRUE,&quot;Confirmed Stakeholder&quot;,&quot;-&quot;))))))))</formula>
        <label>Score Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Socket_Count__c</fullName>
        <label>Socket Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sourced_By__c</fullName>
        <label>Sourced By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sourced_from_Partner__c</fullName>
        <inlineHelpText>Name of partner that provided the lead</inlineHelpText>
        <label>Sourced from Partner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamped_Account_Safe_ID__c</fullName>
        <label>Stamped Account Safe ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Country__c</fullName>
        <formula>IF(AND(ISBLANK(MailingState),ISBLANK(MailingCountry)),NULL, 
IF(AND(NOT(ISBLANK(MailingState)),ISBLANK(MailingCountry)),MailingState, 
IF(AND(ISBLANK(MailingState),NOT(ISBLANK(MailingCountry))),MailingCountry, 
MailingState&amp;&quot;, &quot;&amp;MailingCountry)))</formula>
        <label>State, Country</label>
        <type>Text</type>
    </fields>
</CustomObject>